--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.19MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.22MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.27MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-19.34MB/s(Youtube:不良林), server: xmrh012.xmrth-node.xyz, port: 15885, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh012.xmrth-node.xyz}}
-  - {name: 捷克-4.88MB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
-  - {name: 🇺🇸 美国-3.22MB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
-  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇨🇭 瑞士-383.6KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: 8087b6af-8b74-3097-9ec6-f688da88073e, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.86MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-204.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.01MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-702.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 未知国家-1.72MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.65MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-17.45MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇺🇸 美国-19.34MB/s(Youtube:不良林)
-      - 捷克-4.88MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-383.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.86MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
+      - 未知国家-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
+      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
