--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-204.8KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.01MB/s(Youtube:不良林), server: 152.67.218.38, port: 443, type: vmess, uuid: b5e9480a-b7aa-40a4-f9a7-5299b5e363b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.67.218.38}}
-  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-702.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 未知国家-1.72MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.76MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.65MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.84MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-17.45MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-22.20MB/s(Youtube:不良林), server: xmrh024.xmrth-node.xyz, port: 15887, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh024.xmrth-node.xyz}}
+  - {name: 🇺🇸 美国-2.78MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-865.8KB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.34MB/s(Youtube:不良林), server: su4.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su4.chaoxn.top}}
+  - {name: 🇨🇦 加拿大-2.92MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-4.48MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.83MB/s(Youtube:不良林), server: cmb.3sx.xyz, port: 11002, type: ss, cipher: chacha20-ietf-poly1305, password: a997fd8e-59d7-47cf-afe8-2204bd286017}
+  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: shared.sev7en.cc, port: 20821, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
+  - {name: 🇨🇳 中国-5.59MB/s(Youtube:不良林), server: cmgz18.zifaner.top, port: 20918, type: ssr, cipher: chacha20-ietf, password: download.microso, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 4576:Y0G6hg, obfs-param: fc9ba4576.download.microsoft.com}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-204.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-702.4KB/s(Youtube:不良林)
-      - 未知国家-1.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.76MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.84MB/s(Youtube:不良林)
-      - 🇯🇵 日本-17.45MB/s(Youtube:不良林)
+      - 🇭🇰 香港-22.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-865.8KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.92MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-4.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.83MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
