--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.13MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 柬埔寨-3.75MB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.27MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 12337, type: trojan, password: df8ebf95-bd60-4f7e-a505-fe8db5ba3342, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.00MB/s(Youtube:不良林), server: lc-hk03-direct01.lc-hk03.lc-node.com, port: 443, type: vmess, uuid: ec736482-173e-3eff-9114-b49df8056e7d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: lc-hk03-direct01.lc-hk03.lc-node.com}}
+  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: su11.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su11.chaoxn.top}}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-558.3KB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65041, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-4.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.85MB/s(Youtube:不良林), server: 103.56.62.145, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.13MB/s(Youtube:不良林)
-      - 柬埔寨-3.75MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.39MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-558.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.85MB/s(Youtube:不良林)
